# simple-server-fun

./: Makefile  README.md  pyproject.toml
src/: get_average.py  get_ip_info.py  get_unhealthy_services.py  thoughtcli.py
test/: test_get_average.py  test_get_unhealthy_services.py  test_ip_info.py
